@startuml JobSphere Design Patterns - Updated

' ========== PATTERN 1: SINGLETON ==========
package "Singleton Pattern" #LightBlue {
    class DatabaseManager <<Singleton>> {
        - {static} instance: DatabaseManager
        - users: Map<String, User>
        - jobs: Map<String, Job>
        - applications: Map<String, List<Application>>
        - DatabaseManager()
        + {static} getInstance(): DatabaseManager
        + saveUser(user: User): void
        + getUser(email: String): User
        + userExists(email: String): boolean
        + saveJob(job: Job): void
        + getJob(jobId: String): Job
        + getAllJobs(): List<Job>
        + updateJob(job: Job): void
        + deleteJob(jobId: String): void
        + saveApplication(app: Application): void
        + getApplicationsForJob(jobId: String): List<Application>
        + getApplicationsForApplicant(email: String): List<Application>
        + updateApplication(app: Application): void
    }
}

' ========== PATTERN 2: FACTORY ==========
package "Factory Pattern" #LightYellow {
    class UserFactory <<Factory>> {
        + {static} createUser(type: UserType, email: String, password: String, name: String): User
    }

    abstract class User {
        # email: String
        # password: String
        # name: String
        # userType: UserType
        + User(email: String, password: String, name: String, type: UserType)
        + getEmail(): String
        + getPassword(): String
        + getName(): String
        + getUserType(): UserType
        + setName(name: String): void
        + {abstract} getUserDetails(): String
    }

    class Applicant {
        - resume: String
        - skills: List<String>
        - savedJobs: List<String>
        + Applicant(email: String, password: String, name: String)
        + getResume(): String
        + setResume(resume: String): void
        + getSkills(): List<String>
        + addSkill(skill: String): void
        + getSavedJobs(): List<String>
        + saveJob(jobId: String): void
        + unsaveJob(jobId: String): void
        + isJobSaved(jobId: String): boolean
        + getUserDetails(): String
    }

    class Company {
        - companyDescription: String
        - industry: String
        - postedJobs: List<String>
        + Company(email: String, password: String, name: String)
        + getCompanyDescription(): String
        + setCompanyDescription(desc: String): void
        + getIndustry(): String
        + setIndustry(industry: String): void
        + getPostedJobs(): List<String>
        + addPostedJob(jobId: String): void
        + removePostedJob(jobId: String): void
        + getUserDetails(): String
    }
}

' ========== PATTERN 3: BUILDER ==========
package "Builder Pattern" #LightGreen {
    class Job {
        - id: String
        - companyEmail: String
        - title: String
        - description: String
        - location: String
        - jobType: String
        - salary: String
        - requirements: List<String>
        - responsibilities: List<String>
        - status: JobStatus
        + Job(description: String, title: String, companyEmail: String)
        + getId(): String
        + getCompanyEmail(): String
        + getTitle(): String
        + getDescription(): String
        + getLocation(): String
        + getJobType(): String
        + getSalary(): String
        + getRequirements(): List<String>
        + getResponsibilities(): List<String>
        + getStatus(): JobStatus
        + setTitle(title: String): void
        + setDescription(desc: String): void
        + setLocation(loc: String): void
        + setJobType(type: String): void
        + setSalary(salary: String): void
        + setRequirements(reqs: List<String>): void
        + setResponsibilities(resps: List<String>): void
        + setStatus(status: JobStatus): void
        + canBeDeleted(): boolean
        + canBeEdited(): boolean
    }

    class JobBuilder <<Builder>> {
        + job: Job
        + createNewJob(job: Job): void
        + createNewJob(title: String, email: String, desc: String): void
        + buildlocation(location: String): void
        + buildType(jobType: String): void
        + buildsalary(salary: String): void
        + buildrequirements(requirements: List<String>): void
        + buildresponsibilities(responsibilities: List<String>): void
        + buildstatus(status: JobStatus): void
        + build(): Job
        + reset(): void
        + hasJob(): boolean
    }

    enum JobStatus {
        ACTIVE
        PAUSED
        CLOSED
    }
}

' ========== PATTERN 4: STATE ==========
package "State Pattern" #Plum {
    class Application {
        - id: String
        - jobId: String
        - applicantEmail: String
        - resume: String
        - appliedDate: Date
        - state: ApplicationState
        + Application(jobId: String, email: String, resume: String)
        + getId(): String
        + getJobId(): String
        + getApplicantEmail(): String
        + getResume(): String
        + getAppliedDate(): Date
        + getStatus(): String
        + setState(state: ApplicationState): void
        + nextState(): void
        + transitionTo(status: String): void
        + canTransitionTo(status: String): boolean
        + getStateDescription(): String
        + canBeEdited(): boolean
        + isFinalState(): boolean
    }

    interface ApplicationState {
        + getStatusName(): String
        + nextState(app: Application): void
        + canTransitionTo(status: String): boolean
        + getStateDescription(): String
        + canBeEdited(): boolean
        + isFinalState(): boolean
    }

    class PendingState {
        + getStatusName(): String
        + nextState(app: Application): void
        + canTransitionTo(status: String): boolean
        + getStateDescription(): String
        + canBeEdited(): boolean
        + isFinalState(): boolean
    }

    class ReviewingState {
        + getStatusName(): String
        + nextState(app: Application): void
        + canTransitionTo(status: String): boolean
        + getStateDescription(): String
        + canBeEdited(): boolean
        + isFinalState(): boolean
    }

    class InterviewState {
        + getStatusName(): String
        + nextState(app: Application): void
        + canTransitionTo(status: String): boolean
        + getStateDescription(): String
        + canBeEdited(): boolean
        + isFinalState(): boolean
    }

    class AcceptedState {
        + getStatusName(): String
        + nextState(app: Application): void
        + canTransitionTo(status: String): boolean
        + getStateDescription(): String
        + canBeEdited(): boolean
        + isFinalState(): boolean
    }

    class RejectedState {
        + getStatusName(): String
        + nextState(app: Application): void
        + canTransitionTo(status: String): boolean
        + getStateDescription(): String
        + canBeEdited(): boolean
        + isFinalState(): boolean
    }
}

' ========== PATTERN 5: STRATEGY ==========
package "Strategy Pattern" #Wheat {
    interface SearchStrategy {
        + search(jobs: List<Job>, criteria: String): List<Job>
    }

    class KeywordSearchStrategy {
        + search(jobs: List<Job>, criteria: String): List<Job>
    }

    class LocationSearchStrategy {
        + search(jobs: List<Job>, criteria: String): List<Job>
    }

    class JobTypeSearchStrategy {
        + search(jobs: List<Job>, criteria: String): List<Job>
    }

    class JobSearchContext <<Context>> {
        - strategy: SearchStrategy
        + JobSearchContext()
        + setStrategy(strategy: SearchStrategy): void
        + executeSearch(jobs: List<Job>, criteria: String): List<Job>
    }
}

' ========== PATTERN 6: FACADE ==========
package "Facade Pattern" #LightCyan {
    class JobSphereServiceFacade <<Facade>> {
        - {static} instance: JobSphereServiceFacade
        - dbManager: DatabaseManager
        - JobSphereServiceFacade()
        + {static} getInstance(): JobSphereServiceFacade
        + registerUser(type: UserType, email: String, password: String, name: String): User
        + loginUser(email: String, password: String): User
        + postJob(job: Job, company: Company): void
        + searchJobs(): List<Job>
        + getJob(jobId: String): Job
        + updateJob(job: Job): void
        + updateJobStatus(jobId: String, status: JobStatus): void
        + deleteJob(jobId: String, company: Company): void
        + submitApplication(app: Application, jobTitle: String, companyEmail: String): void
        + getApplicationsForJob(jobId: String): List<Application>
        + getApplicationsForApplicant(email: String): List<Application>
        + updateApplicationStatus(app: Application, status: String, jobTitle: String): void
        + saveJobForApplicant(applicant: Applicant, jobId: String): void
        + unsaveJobForApplicant(applicant: Applicant, jobId: String): void
    }
}

' ========== RELATIONSHIPS ==========

' Factory Pattern
UserFactory ..> User : <<creates>>
UserFactory ..> Applicant : <<creates>>
UserFactory ..> Company : <<creates>>
User <|-- Applicant
User <|-- Company

' Builder Pattern
Job +-- JobStatus : <<enum>>
JobBuilder ..> Job : <<builds>>
JobBuilder --> Job : uses

' State Pattern
Application o-- ApplicationState : has
ApplicationState <|.. PendingState
ApplicationState <|.. ReviewingState
ApplicationState <|.. InterviewState
ApplicationState <|.. AcceptedState
ApplicationState <|.. RejectedState

' Strategy Pattern
SearchStrategy <|.. KeywordSearchStrategy
SearchStrategy <|.. LocationSearchStrategy
SearchStrategy <|.. JobTypeSearchStrategy
JobSearchContext o-- SearchStrategy : uses

' Facade Pattern
JobSphereServiceFacade --> DatabaseManager : uses
JobSphereServiceFacade --> UserFactory : uses

' Data Storage
DatabaseManager --> User : stores
DatabaseManager --> Job : stores
DatabaseManager --> Application : stores

@enduml